k8s-configs/cluster-tools/base/monitoring/newrelic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-nri-metadata-injection
  namespace: newrelic
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nri-metadata-injection
    app.kubernetes.io/version: 1.27.2
    helm.sh/chart: nri-metadata-injection-4.19.2
spec:
  ports:
  - port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: nri-metadata-injection
